@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0">
+<ui version="4.0" >
  <class>RiffImportDlg</class>
- <widget class="QDialog" name="RiffImportDlg">
-  <property name="geometry">
+ <widget class="QDialog" name="RiffImportDlg" >
+  <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
@@ -10,117 +9,117 @@
     <height>219</height>
    </rect>
   </property>
-  <property name="windowTitle">
-   <string>RiffImportDlg</string>
+  <property name="windowTitle" >
+   <string>Import Sound Font instruments</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout" >
    <item>
-    <widget class="QFrame" name="frame">
-     <property name="frameShape">
+    <widget class="QFrame" name="frame" >
+     <property name="frameShape" >
       <enum>QFrame::StyledPanel</enum>
      </property>
-     <property name="frameShadow">
+     <property name="frameShadow" >
       <enum>QFrame::Raised</enum>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0">
-       <widget class="QLabel" name="labelInput">
-        <property name="text">
+     <layout class="QGridLayout" name="gridLayout" >
+      <item row="0" column="0" >
+       <widget class="QLabel" name="labelInput" >
+        <property name="text" >
          <string>Input File</string>
         </property>
-        <property name="buddy">
+        <property name="buddy" >
          <cstring>m_input</cstring>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="m_input">
-        <property name="readOnly">
+      <item row="0" column="1" >
+       <widget class="QLineEdit" name="m_input" >
+        <property name="readOnly" >
          <bool>true</bool>
         </property>
        </widget>
       </item>
-      <item row="0" column="2">
-       <widget class="QPushButton" name="m_inputBtn">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <item row="0" column="2" >
+       <widget class="QPushButton" name="m_inputBtn" >
+        <property name="sizePolicy" >
+         <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
-        <property name="maximumSize">
+        <property name="maximumSize" >
          <size>
           <width>27</width>
           <height>27</height>
          </size>
         </property>
-        <property name="text">
+        <property name="text" >
          <string>...</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="labelName">
-        <property name="text">
+      <item row="1" column="0" >
+       <widget class="QLabel" name="labelName" >
+        <property name="text" >
          <string>Name</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1" colspan="2">
-       <widget class="QLabel" name="m_name">
-        <property name="text">
+      <item row="1" column="1" colspan="2" >
+       <widget class="QLabel" name="m_name" >
+        <property name="text" >
          <string/>
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="labelVersion">
-        <property name="text">
+      <item row="2" column="0" >
+       <widget class="QLabel" name="labelVersion" >
+        <property name="text" >
          <string>Version</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="1" colspan="2">
-       <widget class="QLabel" name="m_version"/>
+      <item row="2" column="1" colspan="2" >
+       <widget class="QLabel" name="m_version" />
       </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="labelCopyright">
-        <property name="text">
+      <item row="3" column="0" >
+       <widget class="QLabel" name="labelCopyright" >
+        <property name="text" >
          <string>Copyright</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="1" colspan="2">
-       <widget class="QLabel" name="m_copyright"/>
+      <item row="3" column="1" colspan="2" >
+       <widget class="QLabel" name="m_copyright" />
       </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="labelOutput">
-        <property name="text">
+      <item row="4" column="0" >
+       <widget class="QLabel" name="labelOutput" >
+        <property name="text" >
          <string>Output File</string>
         </property>
-        <property name="buddy">
+        <property name="buddy" >
          <cstring>m_output</cstring>
         </property>
        </widget>
       </item>
-      <item row="4" column="1">
-       <widget class="QLineEdit" name="m_output"/>
+      <item row="4" column="1" >
+       <widget class="QLineEdit" name="m_output" />
       </item>
-      <item row="4" column="2">
-       <widget class="QPushButton" name="m_outputBtn">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <item row="4" column="2" >
+       <widget class="QPushButton" name="m_outputBtn" >
+        <property name="sizePolicy" >
+         <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
-        <property name="maximumSize">
+        <property name="maximumSize" >
          <size>
           <width>27</width>
           <height>27</height>
          </size>
         </property>
-        <property name="text">
+        <property name="text" >
          <string>...</string>
         </property>
        </widget>
@@ -129,15 +128,15 @@
     </widget>
    </item>
    <item>
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="standardButtons">
+    <widget class="QDialogButtonBox" name="buttonBox" >
+     <property name="standardButtons" >
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
- <layoutdefault spacing="6" margin="11"/>
+ <layoutdefault spacing="6" margin="11" />
  <tabstops>
   <tabstop>buttonBox</tabstop>
   <tabstop>m_input</tabstop>
@@ -153,11 +152,11 @@
    <receiver>RiffImportDlg</receiver>
    <slot>accept()</slot>
    <hints>
-    <hint type="sourcelabel">
+    <hint type="sourcelabel" >
      <x>226</x>
      <y>168</y>
     </hint>
-    <hint type="destinationlabel">
+    <hint type="destinationlabel" >
      <x>452</x>
      <y>122</y>
     </hint>
@@ -169,11 +168,11 @@
    <receiver>RiffImportDlg</receiver>
    <slot>reject()</slot>
    <hints>
-    <hint type="sourcelabel">
+    <hint type="sourcelabel" >
      <x>163</x>
      <y>166</y>
     </hint>
-    <hint type="destinationlabel">
+    <hint type="destinationlabel" >
      <x>448</x>
      <y>108</y>
     </hint>
